Stream collectors and UserIntegrationDomainService refactoring